[build-system]
requires = [
  "setuptools",
  "wheel",
  "numpy",
  "f90wrap",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyale"
description = "A Python wrapper for MOM6's ALE"
readme = "README.md"
license = {text = "MIT License"}
version = "0.0.1"
authors = [
  {name = "Angus Gibson", email = "angus@agibson.me"}
]
dependencies = ["numpy", "f90wrap"]